client/app/card/_card.theme.scss
@use 'sass:map';
@use '@angular/material' as mat;
@use '../../styles/typography';
@mixin card($theme) {
    $primary: map.get($theme, primary);
    $accent: map.get($theme, accent);
    $warn: map.get($theme, warn);
    $bg: map.get($theme, background);
    $fg: map.get($theme, foreground);

    $config: mat.get-color-config($theme);
    $is-dark-theme: map.get($config, is-dark);
    $label-color: mat.get-color-from-palette($fg, secondary-text, if($is-dark-theme, 0.7, 0.6)) !important;
    $primary-color: mat.get-color-from-palette($primary);

    $transition-animation: 200ms cubic-bezier(0.4, 0, 0.2, 1);
    $hint-height: 22.5px;
    $rich-text-padding-left: 16px;
    $border-bottom-width: 1px;
    $font-size-body-1: mat.font-size(typography.$custom-typography-gt-sm, 'body-1');

    app-card {
        mat-toolbar.edition {
            background: mat.get-color-from-palette($accent, 0.4);
        }

        mat-chip-row {
            font-size: $font-size-body-1;
            font-family: inherit !important;
        }

        // Try to match official mat-form-field input component style.
        .rich-text {
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
            background: mat.get-color-from-palette($fg, base, if($is-dark-theme, 0.12, 0.02));
            border-bottom: $border-bottom-width solid mat.get-color-from-palette($fg, base, 0.5);
            border-top-left-radius: 4px;
            border-top-right-radius: 4px;
            margin-bottom: $hint-height;
            outline: none;
            padding: 24px 10px 0 $rich-text-padding-left;
            position: relative;
            transition: color $transition-animation;

            &::after {
                content: '';
                background-color: $primary-color;
                bottom: -$border-bottom-width;
                height: 2px;
                left: 50%;
                position: absolute;
                width: 0;
            }

            &:hover {
                background: mat.get-color-from-palette($fg, base, if($is-dark-theme, 0.15, 0.06));
            }

            &:focus-within {
                background: mat.get-color-from-palette($fg, base, if($is-dark-theme, 0.25, 0.1));

                &::after {
                    width: 100%;
                    transform: translateX(-50%);
                    transition:
                        width $transition-animation,
                        transform $transition-animation;
                }

                .label {
                    color: $primary-color !important;
                }
            }

            &.filled,
            &:focus-within {
                .label {
                    left: auto;
                    transform: translateY(-106%) scale(0.75);
                }
            }

            .label {
                color: $label-color;
                font-size: $font-size-body-1;
                left: $rich-text-padding-left;
                position: absolute;
                top: 28px;
                transform: translateY(-50%);
                transform-origin: top left;
                transition: transform $transition-animation;
            }

            .ql-container {
                font-size: $font-size-body-1;
                font-family: inherit !important;
                letter-spacing: mat.letter-spacing(typography.$custom-typography-gt-sm, 'body-1');
            }

            quill-editor {
                display: block;
                caret-color: $primary-color;
            }

            .ql-editor {
                padding: 0 0 8px 0;

                p {
                    margin-bottom: 0;
                }
            }

            mat-hint {
                position: absolute;
                right: 16px;
                bottom: -$hint-height;
                font-size: mat.font-size(typography.$custom-typography-gt-sm, 'caption');
            }
        }

        // Be sure that the toolbar stays one one line
        // It should not be necessary but it seems that something goes wrong in the computation of the width by QuillJs
        .ql-flip.ql-tooltip {
            min-width: 170px;
        }

        a[href] {
            color: mat.get-color-from-palette($accent);
            overflow-wrap: break-word;
        }

        #fiches-additionnelles {
            natural-table-button span {
                white-space: normal;
                line-height: 1.5em;
            }
        }

        // Make disabled select box looks same as disabled text input, eg: the country field
        natural-select .mat-form-field-appearance-fill.mat-form-field-disabled {
            .mat-mdc-form-field {
                background-color: mat.get-color-from-palette($fg, base, if($is-dark-theme, 0.1, 0.04));
            }

            mat-label {
                color: $label-color;
            }

            .mdc-line-ripple::before {
                border-bottom-color: mat.get-color-from-palette($fg, divider, if($is-dark-theme, 0.5, 0.42)) !important;
            }

            input {
                color: mat.get-color-from-palette($fg, text) !important;
            }
        }
    }
}

